--- a/index.html
+++ b/index.html
@@ -13,3 +13,26 @@
 <div class="div2">Вікторія Захарко. Журналістка телеканалу "Прямий та студентка академії "ШАГ".</div>
 
 <img src="3.jpg" alt="">
+
+<div1>
+    <table>
+        
+        <table class="brd">
+            <tr>
+                <th>Номер</th>
+                <th>Що бажаєш</th>
+                <th>Скільки коштує</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+       
+
+
+</div1>
